name:                logo
version:             0.1.0.0
synopsis:            haskell.bayern logo
description:         Please see README.md
homepage:            https://github.com/haskell-bayern/logo
license:             PublicDomain
license-file:        LICENSE
author:              Christian Neukirchen
maintainer:          chneukirchen@gmail.com
copyright:           None
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

executable logo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , colour
                     , split
